2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	  Added CRC16 to checksum command.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/Adler32Context.cs:
	  Added Adler-32 checksum

2015-03-22  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ProDOS.cs:
	* DiscImageChef.csproj:
	  Implemented support for Apple ProDOS/SOS filesystem
	  (untested).

2015-03-21  Natalia Portillo  <claunia@claunia.com>

	* Decoders/DVD.cs:
	* Decoders/MMC.cs:
	* DiscImageChef.csproj:
	* ImagePlugins/ImagePlugin.cs:
	  Added DVD structures.

2015-03-05  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/DiskCopy42.cs:
	  Correct typo in DC42 tag checksumming.

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC64Context.cs:
	  Endian typoness

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC32Context.cs:
	  Corrected poly and endian issues.

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC16Context.cs:
	  Corrected poly, solved endian problem

2014-04-21  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	  Start to implement OpenImage(), decode comment block.

2014-04-21  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	  Added CRC calculation method and check of header using CRC
	  to return a positive identification.

2014-04-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	* FileSystemIDandChk.csproj:
	  Started Sydex TeleDisk implementation, with structs,
	  constants and initial Identify() implementation.

2014-04-19  Natalia Portillo  <claunia@claunia.com>

	* LICENSE:
	* Main.cs:
	* Plugins.cs:
	* Swapping.cs:
	* Plugins/BFS.cs:
	* Plugins/FFS.cs:
	* Plugins/ODS.cs:
	* Plugins/FAT.cs:
	* Plugins/SysV.cs:
	* Plugins/NTFS.cs:
	* AssemblyInfo.cs:
	* Plugins/HPFS.cs:
	* DateHandlers.cs:
	* Plugins/Opera.cs: